--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
       padding: 15px;
       font-size: 17px;
       border: none;
-      border-radius: 14px;
+      border-radius: 16px;
       cursor: pointer;
+      position: relative;
+      overflow: hidden;
+      transition: transform 0.15s ease, box-shadow 0.15s ease;
     }
 
     .yes {
@@ -76,7 +79,19 @@
     }
 
     button:hover {
-      opacity: 0.9;
+      transform: translateY(-2px);
+    }
+
+    .yes:hover {
+      box-shadow: 0 0 20px rgba(34,197,94,0.45);
+    }
+
+    .no:hover {
+      box-shadow: 0 0 20px rgba(220,38,38,0.45);
+    }
+
+    button:active {
+      transform: scale(0.95);
     }
 
     .hidden {
@@ -104,20 +119,18 @@
       font-size: 26px;
       font-weight: bold;
       margin-bottom: 10px;
-      letter-spacing: 0.5px;
     }
 
     #finalSubtitle {
       font-size: 16px;
-      opacity: 0.95;
       margin-bottom: 14px;
+      opacity: 0.95;
     }
 
     .quote {
       font-size: 15px;
-      opacity: 0.85;
       font-style: italic;
-      margin-top: 10px;
+      opacity: 0.85;
       line-height: 1.5;
     }
 
@@ -183,10 +196,10 @@
       { text: "Have you quit chai or tea", reason: "you are still addicted to chai or tea" },
       { text: "Are you sleeping early", reason: "you are not sleeping early" },
       { text: "Are you making your day productive", reason: "your day is not productive" },
-      { text: "Are you wasting your time like you used to do", reason: "you are still wasting your time" },
+      { text: "Are you still wasting your time like before", reason: "you are still wasting your time" },
       { text: "Have you quit junk food", reason: "you still eat junk food" },
-      { text: "Did you confession", reason: "you did not confession" },
-      { text: "Are you happy now", reason: "you are not happy with your life" }
+      { text: "Have you confessed your feelings", reason: "you kept your feelings to yourself" },
+      { text: "Are you happy with your life right now", reason: "you are not happy with your life" }
     ]
 
     let currentIndex = 0
@@ -239,9 +252,8 @@
         finalCard.classList.add("success")
         finalTitle.innerText = "Well done"
         finalSubtitle.innerText = "You chose discipline over comfort"
-
         finalQuote.innerText =
-          "Small daily decisions create massive life change Keep choosing what is hard today for an easier tomorrow"
+          "Growth happens when excuses end and courage begins Keep walking this path"
       }
     }
   </script>
