--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <body>
 
   <div class="container">
-    <div class="main-title">The Truth Test</div>
+    <div class="main-title">Be Honest Once</div>
     <div class="sub-title">Answer honestly no filters no excuses</div>
 
     <p id="question"></p>
